--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,41 @@
-/*  your css code here. If applicable */
+/* Set entire page background using :root */
+:root {
+  background-color: rgb(135, 206, 235);
+}
+
+/* Paragraph styling inside article */
+article p:first-child {
+  background-color: black;
+  color: white;
+}
+
+article p:nth-child(2) {
+  color: initial; /* default text color */
+}
+
+article p:last-child {
+  color: red;
+}
+
+/* List item styling */
+ul li {
+  background-color: gray;
+  width: 50%;
+  padding: 10px;
+}
+
+/* Odd items get white background */
+ul li:nth-child(odd) {
+  background-color: white;
+}
+
+/* First and last items get larger font */
+ul li:first-child,
+ul li:last-child {
+  font-size: 22px;
+}
+
+/* Third-to-last item gets pink background */
+ul li:nth-last-child(3) {
+  background-color: pink;
+}
